#	$Id$	

Changelog for HylaFAX

* fix DCS scanline-time error when sending to systems without
  ECM supporting "mixed" scanline-times (24 Feb 2005)
* cause faxsend to log jobs in batches as separate commids (24 Feb 2005)
* change how faxsend is invoked for batches (24 Feb 2005)
* add batch failed detection for Brothers (23 Feb 2005)
* minor fix in notify for mawk (16 Feb 2005)
* fix a false V.34-Fax error message after FTT (16 Feb 2005)
* convert CIDName/CIDNumber to CallID (14 Feb 2005)
* add MaxBatchJobs config option (10 Feb 2005)
* improve the way that external gettys are run
* fix some problems when decoding pipe fails in ECM
* ignore "echos" of the dialed number after dialing
* set Class1*WaitCmds in cirrus config to not use +FTS/+FRS
* improve default modem config file for Digi/Patton Class 1
* force the Class 2 driver to repeat the +FDIS command after EOM
* add FaxParams class and some utilization of it

Changelog for HylaFAX 4.2.1 - Jan 11, 2005

* fix CAN-2004-1182: hfaxd client/server authentication
  vulnerability (10 Jan 2005)
* fix possible filename race in tiff2pdf (10 Jan 2005)
* improve modern distinctive ring support, add
  NoAnswerVoice config feature, and enhance third-party
  getty interaction (1, 2 Jan 2005)
* add support for etc/resetmodem (30 Dec 2004)
* fix NOTIFY_FAXMASTER within notify (30 Dec 2004)
* improve tiff2pdf and use it more (29 Dec 2004)
* fix 300 dpi support for some receivers (28 Dec 2004)
* cause faxsetup to double-check and fix attachment encoding
  setup (27 Dec 2004)
* add uuencode support in pollrcvd (27 Dec 2004) 
* add support for base64-encode (27 Dec 2004)
* check strftime with arguments, gcc-3.3 fix (23 Dec 2004)
* initialize some variables in some scripts that may not
  be initialzed in setup.cache (23, 27 Dec 2004)
* remove need to have separate "fax" user (22 Dec 2004)
* fix parsing of AT+FCLASS=? response within faxaddmodem
  and probemodem (21 Dec 2004)
* improve multi-line handling within notify (20 Dec 2004)